# feature-store

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
src/feature_store/: main.py
src/feature_store/server/: app.py  database.py
src/feature_store/server/models/: geojson.py
src/feature_store/server/routes/: features.py
test/: conftest.py
test/data/: geojson-test.json  geospatial-search.json  test_features.json
test/e2e/: test_e2e.py
test/server/: test_app.py
test/server/models/: test_geojson.py
test/unit/server/models/: test_geojson.py
test/unit/server/routes/: test_features.py
