[tool.poetry]
name = "feature-store"
version = "0.1.0"
description = ""
authors = ["Jason Washburn <jason.washburn@gmail.com>"]
readme = "README.md"
packages = [{ include = "feature_store", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
beanie = "^1.19.2"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.272"
mypy = "^1.3.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pre-commit = "^3.3.3"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"
select = ["ALL"]
ignore = ["ANN101"]
unfixable = [
    # Don't remove `print` statements, just warn.
    "T201",
    "ERA001",
]

[tool.ruff.per-file-ignores]
"./**/__*__.py" = ["D100", "D104"]
"./test/**/*.py" = ["S101", "PLR2004", "SLF001"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-type-checking]
strict = false

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
ignore_missing_imports = true
strict = true
